# ericshortcut.github.io

./: CNAME  Gemfile  README.md  _config.yml
_data/: data.yml
_site/: index.html
_site/old-content/: LICENSE  blog.html  package.json
_site/old-content/prova/doc/: doc-index.html  index-frames.html
_site/old-content/prova/doc/all/: doc-index-36.html  doc-index-All.html  doc-index-B.html  doc-index-D.html  doc-index-G.html  doc-index-H.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-X.html  index.html
_site/old-content/prova/doc/prova-0.0.1/: ADSM.html  ADSN.html  Main.html  doc-index.html  index-frames.html  index.html  prova.haddock  prova.txt
_site/old-content/prova/src/: ADSM.hs  ADSN.hs  SI.hs  prova.cabal
_site/old-content/seguranca-digital/: seguranca-digital.html
old-content/: README.md  index.html  stylus:style.styl
old-content/css/: style.css
old-content/js/: analytics.js
old-content/prova/doc/: index.html
old-content/prova/doc/all/: doc-index-33.html  doc-index-47.html  doc-index-A.html  doc-index-C.html  doc-index-E.html  doc-index-F.html  doc-index-I.html  doc-index-M.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  index-frames.html
old-content/prova/doc/base-4.9.0.0/: Foreign-C-Types.html  System-Posix-Types.html
old-content/prova/doc/prova-0.0.1/: SI.html  mini_ADSM.html  mini_ADSN.html  mini_SI.html
old-content/prova/src/: clean_deploy.sh  main.hs
old-content/seguranca-digital/: seguranca-digital.md
old-content/slides/bot/: index.html
(+4 files in other folders)
